# RAMEN_ver4_for_AGV_100ex

RAMEN_2025-main/: .gitignore  README.md
RAMEN_2025-main/src/agv_sim/: CMakeLists.txt  package.xml
RAMEN_2025-main/src/agv_sim/config/: slam_params.yaml  teleop_config.yaml
RAMEN_2025-main/src/agv_sim/launch/: laser_odom.launch.py  launch.py  real.launch.py  sim.launch.py
RAMEN_2025-main/src/agv_sim/models/quarter_arc_wall/: model.config  model.sdf
RAMEN_2025-main/src/agv_sim/urdf/: agv.urdf  agv.urdf.xacro
RAMEN_2025-main/src/agv_sim/worlds/: loop_world.world
RAMEN_2025-main/src/button/: package.xml  setup.py
RAMEN_2025-main/src/button/button/: button_publisher.py  button_subscriber.py
RAMEN_2025-main/src/encoder_odometry/: package.xml  setup.py
RAMEN_2025-main/src/encoder_odometry/encoder_odometry/: encoder_odometry_node.py
RAMEN_2025-main/src/jetson_motor/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/jetson_motor/jetson_motor/: __init__.py  duty_test_launch.py  duty_test_running.py  joy_listener.py
RAMEN_2025-main/src/joy_controller/: package.xml  setup.py
RAMEN_2025-main/src/joy_controller/joy_controller/: joy_translate_node.py
RAMEN_2025-main/src/joy_controller/launch/: joy_controller_launch.py
RAMEN_2025-main/src/lidar_ransac/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/lidar_ransac/lidar_ransac/: ransac.py
RAMEN_2025-main/src/move_target/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/move_target/launch/: target_test_launch.py
RAMEN_2025-main/src/move_target/move_target/: target.py
RAMEN_2025-main/src/real_robot/: joy_listener.py
RAMEN_2025-main/src/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2DNode.h
RAMEN_2025-main/src/right_hand_controller/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/right_hand_controller/right_hand_controller/: wall_follower2.py  wall_follower2.py.save  wall_follower2.py.save.1
RAMEN_2025-main/src/right_hand_controller/right_hand_controller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
RAMEN_2025-main/src/sllidar_ros2/launch/: view_sllidar_a2m12_launch.py
RAMEN_2025-main/src/status_manager/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/status_manager/launch/: AGV_launch.py  manager_test_launch.py
RAMEN_2025-main/src/status_manager/status_manager/: __init__.py  manager.py
RAMEN_2025-main/src/transition/: package.xml  setup.cfg  setup.py
RAMEN_2025-main/src/transition/launch/: lifecycle_launch.py  mode_change_tutorial.py
RAMEN_2025-main/src/transition/transition/: transition_tutorial.py  wall_follwer_lifecycle.py
